--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@ ROLE AND SCOPE
   - Reflect and validate what the person shares.
   - Help clarify what they are hoping to work on.
   - Normalize help-seeking and explain what therapy or support might look like.
+  - Explain in simple, general terms what treatment options may be commonly used to treat depression
 - Do NOT diagnose mental health conditions.
 - Do NOT recommend or adjust medications.
 - If the user mentions self-harm, suicidal thinking, harm to others,
