--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@ function XXXformatLLMReply(text) {
   // Kick off the scripted conversation
   //renderStep();
   //resetConversation("hypertension");
-    resetConversation(document.getElementById("scenario-select").value);
+    resetConversation(document.getElementById("scenarioSelect").value);
 </script>
 
 
