--- a/index.html
+++ b/index.html
@@ -389,30 +389,25 @@ SOURCE CHECK
     scrollChatToBottom();
   }
 
-  async function callLLM(userText, options = {}) {
-    const { endpoint, systemPrompt } = options;
-    const url = endpoint || API_URL;
+async function callLLM(userText, options = {}) {
+  const { endpoint, systemPrompt } = options;
+  const url = endpoint || API_URL;
 
-    const response = await fetch(url, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({
-        message: userText,
-        profile: activeProfile,
-        systemPrompt: systemPrompt || undefined,
-      }),
-    });
+  const response = await fetch(url, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      message: userText,
+      systemPrompt: systemPrompt || undefined
+    }),
+  });
 
-    if (!response.ok) {
-      console.error("LLM error:", await response.text());
-      return "Sorry, I’m having trouble responding right now.";
-    }
+  const data = await response.json();
+  const raw = data.reply || data.summary || JSON.stringify(data);
 
-    const data = await response.json();
-    const raw = data.reply || data.summary || JSON.stringify(data);
+  return formatLLMReply(raw);
+}
 
-    return formatLLMReply(raw);
-  }
 
   function formatLLMReply(text) {
     if (!text) return "";
