--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </select>
 </div>
 <button id="headerToggle" class="header-toggle" aria-label="Show header">
-  ⌄ Options
+  Hide options <!-- ⌄ Options -->
 </button>
 <div id="scripted-chat" class="chat-container">
   <div id="chat-log"></div>
