--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <h2>Hybrid Scripted/LLM Conversation Flow Demo</h2>
 <p>
   This example shows different conversation flows featuring scripted content and LLM interactivity. Choose one to try:
+  <br><br> ... OR try <button id="script-builder-btn">building your own</button>
 </p>
 
 <label for="scenarioSelect"><strong>Choose a scenario:</strong></label>
